# trusted-contract-execution-enclave

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml
.github/workflows/: execution-enclave-server-hw.yaml  execution-enclave-server-sw.yaml
app/: Cargo.toml  build.rs
app/src/: main.rs  structs.rs
enclave/: Cargo.toml  Enclave.edl  Makefile
enclave/src/: lib.rs  structs.rs
